other/rec-req/replace-image-registry/.kyverno-test/patchedResource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod1
  namespace: default
spec:
  containers:
  - image: myregistry.corp.com/nginx:latest
    name: docker-with-registry
