other/rec-req/replace-image-registry/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: replace-image-registry
policies:
- ../replace-image-registry.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResource: patchedResource1.yaml
  policy: replace-image-registry
  resources:
  - myapp-pod1
  result: pass
  rule: replace-image-registry-pod-containers
- kind: Pod
  patchedResource: patchedResource3.yaml
  policy: replace-image-registry
  resources:
  - myapp-pod2
  result: pass
  rule: replace-image-registry-pod-containers
- kind: Pod
  patchedResource: patchedResource3.yaml
  policy: replace-image-registry
  resources:
  - myapp-pod2
  result: pass
  rule: replace-image-registry-pod-initcontainers
- kind: Pod
  patchedResource: patchedResource1.yaml
  policy: replace-image-registry
  resources:
  - myapp-pod1
  result: skip
  rule: replace-image-registry-pod-initcontainers
